[Add]aboutページ作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
                     <i class="fas fa-home"></i> Home</a>
                 </li>
                 <li>
-                  <a class="nav-link text-light" href="/home/about">
+                  <a class="nav-link text-light" href="/homes/about">
                     <i class="fas fa-link"></i> About</a>
                 </li>
                 <li>
@@ -61,7 +61,7 @@
   </header>
     <%= yield %>
   </body>
-  
+
   <footer>
     <div class="container mt-5">
       <div class="row">
