--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,11 +1,10 @@
 
 <main>
-  <p></p>
+  <p id="notice"></p>
   <div class="container">
     <div class="row">
       <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
-        <h1>welcome to <i class="fas fa-book"></i>
-        <strong>Bookers</strong> !!</h1>
+        <h1>Welcome to <i class="fas fa-book"></i><strong>Bookers</strong> !!</h1>
         <p>In <i class="fas fa-book"></i><strong>Bookers</strong>,</p>
         <p>you can share and exchange  your opinions , inpressions , and emotions</p>
         <p>about various books!</p>
