--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,40 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div class="container px-5 px-sm -0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <table>
+          <tbody>
+            <tr>
+              <th>name</th>
+              <th><%= @user.name %></th>
+            </tr>
+            <tr>
+              <th>introduction</th>
+              <th><%= @user.introduction %></th>
+            </tr>
+        </tbody>
+      </table>
+      <div class="row">
+        <%= link_to edit_user_path(current_user.id),class: 'btn btn-outline-secondary btn-block' do %>
+          <i class="fas fa-user-cog"></i>
+        <% end %>
+      </div>
+      <h2 class="mt-3">New book</h2>
+      
+        <%= form_with model: @books, url:'/books', method: :post do |f| %>
+          <div class="form">
+            <label for="book_body">Title</label>
+            <input class="form-control book_title" type="text" name="book[title]" id="book_title" kl_vkbd_parsed="true">
+          </div>
+          <div class="form mt-3">
+            <label for="book_body">Opinion</label>
+            <textarea class="form-control book_body" name="book[body]" id="book_body"></textarea>
+          </div>
+          <div class="actions mt-3">
+            <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" kl_vkbd_parsed="true">
+          </div>
+        <% end %>
+    </div>
+    <div class="col-md-8 offset-md-1"></div>
+  </div>
+</div>
