--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,21 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>User info</h1>
+      <%= form_with model: @user do |f| %>
+        <div class="user-name my-2">Name</div>
+          <%= f.text_field :name ,class: "form-control" %>
+
+        <div class="user-edit-image my-2">Image</div>
+          <%= f.file_field :profile_image %>
+
+        <div class="form-body my-2">Introduction</div>
+          <%= f.text_area :introduction , class: "form-control mb-3" %>
+
+        <div class="upload mb-2">
+          <input type="submit" name="commit" value="Update User" class="btn btn-secondary" data-disable-with="Update User" kl_vkbd_parsed="true">
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
