--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,15 @@
-<div class="container px-5 px-sm -0">
+<div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
-      <table>
+      <table class="table">
           <thead>
             <tr>
-              <%= image_tag 'no_image', size: "100x100" %>
+              <% if @user.profile_image.attached? %>
+                <%= image_tag @user.profile_image, size: "100x100" %>
+              <% else %>
+                <%= image_tag 'no_image', size: "100x100" %>
+              <% end %>
             </tr>
           </thead>
           <tbody>
@@ -18,10 +22,7 @@
               <th><%= @user.introduction %></th>
             </tr>
             <tr>
-              <th colspan="2">
-              <%= link_to edit_user_path(current_user), class:"btn btn-default btn-block" do %>
-                <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-              <% end %>
+            <th colspan="2">
             </tr>
         </tbody>
       </table>
