[Update]Books_indexページ作成

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -48,6 +48,37 @@
           </div>
         <% end %>
     </div>
-    <div class="col-md-8 offset-md-1"></div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+    <% @books.each do |book| %>
+  <tbody>
+    <tr>
+      <td>
+      <%= link_to user_path(@user) do %>
+        <% if @user.profile_image.attached? %>
+          <%= image_tag @user.profile_image, size: "100x100" %>
+        <% else %>
+          <%= image_tag 'no_image', size: "100x100" %>
+        <% end %>
+      <% end %>
+      </td>
+      <td>
+        <%= link_to book.title,book_path(book.id) %>
+      </td>
+      <td><%= book.body %></td>
+    </tr>
+  </tbody>
+  <% end %>
+</table>
+    </div>
   </div>
 </div>
