--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -42,7 +42,7 @@
       <%= f.text_area :body , class: "form-control" %>
     </div>
     <div class="actions mt-3">
-      <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" kl_vkbd_parsed="true">
+      <button type="submit" class="btn btn-success">Create Book</button>
     </div>
   <% end %>
 </div>
