--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
           <%= f.text_area :introduction , class: "form-control mb-3" %>
 
         <div class="upload mb-2">
-          <input type="submit" name="commit" value="Update User" class="btn btn-secondary" data-disable-with="Update User" kl_vkbd_parsed="true">
+          <button type="submit" class="btn btn-secondary">Update User</button>
         </div>
       <% end %>
     </div>
