--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,32 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    
+    <%= render 'users/user_info', users: @users %>
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+        </thead>
+        <div class="col-xs-9">
+          <tr>
+            <td>
+            <%= link_to user_path(@user) do %>
+              <% @user.profile_image.attached? %>
+                <%= image_tag @user.profile_image, size: "100x100" %>
+                 <p><%= @user.name %></p>
+              <% end %>
+            </td>
+            <td>
+            <%= link_to @book.title,book_path(@book.id) %>
+            </td>
+            <td><%= @book.body %></td>
+            <% if @book.user_id == current_user.id %>
+              <td><%= link_to "Edit", edit_book_path(@book), class:"btn btn-success"%></td>
+              <td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除しますか？"}, class:"btn btn-danger" %></td>
+            <% end %>
+          </tr>
+        </div>
+      </table>
+    </div>
+  </div>
+</div>
