--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,3 +2,37 @@
   <div class="row">
 
   <%= render 'user_info', users: @users %>
+      <div class="col-md-8 offset-md-1">
+      <h2>Users</h2>
+      <table class="table">
+      <thead>
+        <tr>
+          <th></th>
+          <th>image</th>
+          <th>name</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+        <% @books.each do |book| %>
+        <tbody>
+          <tr>
+            <td>
+            <%= link_to user_path(@user) do %>
+              <% if @user.profile_image.attached? %>
+                <%= image_tag @user.profile_image, size: "100x100" %>
+              <% else %>
+                <%= image_tag 'no_image', size: "100x100" %>
+              <% end %>
+            <% end %>
+            </td>
+            <td>
+              <%= @user.name %>
+            </td>
+            <td><%= link_to "Show",book_path(book.id) %></td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
