--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,9 +61,8 @@
       </nav>
   </header>
   <main>
-    <p class="text-success">
-      <%= flash[:notice] %>
-    </p>
+      <p class="text-success"><%= flash[:notice] %></p>
+      <p class="text-danger"><%= flash[:alert] %></p>
     <%= yield %>
   </main>
   </body>
