--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,18 @@
-<div class="container">
+</div><div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h1>User info</h1>
+      <% if @user.errors.any? %>
+      <div class ="error">
+        <h3><%= @user.errors.count %> errors prohibited this obj from being saved:</h3>
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+      <% end %>
+      
       <%= form_with model: @user do |f| %>
         <div class="user-name my-2">Name</div>
           <%= f.text_field :name ,class: "form-control" %>
