--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                     <i class="fas fa-home"></i> Home</a>
                 </li>
                 <li>
-                  <a class="nav-link text-light" href="/homes/about">
+                  <a class="nav-link text-light" href="/home/about">
                     <i class="fas fa-link"></i> About</a>
                 </li>
                 <li>
