--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,9 +26,9 @@
         <tbody>
           <tr>
             <td>
-            <%= link_to user_path(@user) do %>
+            <%= link_to user_path(book.user) do %>
               <% if @user.profile_image.attached? %>
-                <%= image_tag @user.profile_image, size: "100x100" %>
+                <%= image_tag book.user.profile_image, size: "100x100" %>
               <% else %>
                 <%= image_tag 'no_image', size: "100x100" %>
               <% end %>
