--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,22 +12,22 @@
           <th colspan="3"></th>
         </tr>
       </thead>
-        <% @books.each do |book| %>
+        <% @users.each do |user| %>
         <tbody>
           <tr>
             <td>
-            <%= link_to user_path(@user) do %>
-              <% if @user.profile_image.attached? %>
-                <%= image_tag @user.profile_image, size: "100x100" %>
+            <%= link_to user_path(user) do %>
+              <% if user.profile_image.attached? %>
+                <%= image_tag user.profile_image, size: "100x100" %>
               <% else %>
                 <%= image_tag 'no_image', size: "100x100" %>
               <% end %>
             <% end %>
             </td>
             <td>
-              <%= @user.name %>
+              <%= user.name %>
             </td>
-            <td><%= link_to "Show",book_path(book.id) %></td>
+            <td><%= link_to "Show",user_path(current_user.id) %></td>
           </tr>
         </tbody>
         <% end %>
