--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,7 +27,7 @@
             <td>
               <%= user.name %>
             </td>
-            <td><%= link_to "Show",user_path(current_user.id) %></td>
+            <td><%= link_to "Show",user_path(user.id) %></td>
           </tr>
         </tbody>
         <% end %>
